fixing flexbox issue on safari

--- a/src/scss/base/flex.scss
+++ b/src/scss/base/flex.scss
@@ -44,7 +44,9 @@ footer {
 .flex-wrap {
   display: flex;
   flex-wrap: wrap;
-
+  &:before, &:after {
+    width: 0;
+  }
   &__col {
 
     &--3 {
